log/build_2025-05-20_20-31-25/lab4_image_receiver/stderr.log
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp: In member function ‘void RobotCameraProcessor::image_callback(const ConstSharedPtr&)’:
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:94:21: error: ‘Eigen’ has not been declared
   94 |                     Eigen::Matrix3x3 tf_rotation(
      |                     ^~~~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:99:21: error: ‘tf_rotation’ was not declared in this scope
   99 |                     tf_rotation.getRotation(q);
      |                     ^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/lab4_image_receiver_node.dir/build.make:76: CMakeFiles/lab4_image_receiver_node.dir/src/lab4_image_receiver_node.cpp.o] Ошибка 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/lab4_image_receiver_node.dir/all] Ошибка 2
gmake: *** [Makefile:146: all] Ошибка 2
